<resources>
    <string name="app_name">Call US</string>


    <string name="Api_Key" translatable="false">AIzaSyC71tyYpcjT-4CUM3_30mKfk-dPEura0dU</string>

    //texts for entering phone number for registration
    <string name="welcomeToAddNumber">Enter your mobile number</string>
    <string name="explainToAddNumber">Your number will be stored or used as a contact
    method after the first time you register and agree to our terms and conditions and privacy policy</string>
    <string name="TextNumberHint"> what is your number?</string>
    <string name="ButtonPhoneContinue">Continue</string>
    <string name="VerificationCode">Enter verification code</string>
    <string name="phoneSent">Verification code has been sent to</string>
    <string name="DontRecieve">Don\'t receive verification code? </string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>

    //wlc fragment
    <string name="Welcome">Welcome</string>
    <string name="ChooseASavedPlace">Choose a Saved Place</string>
    <string name="deliver">Deliver With Us</string>

    //bottom navbar
    <string name="navHome">Home</string>
    <string name="navNearby">Nearby</string>
    <string name="navDepart">Departures</string>

    //depart
    <string name="currentLocation">Current Location</string>
    <string name="whereTo">Where To?</string>
    <string name="now">Now</string>
    <string name="requestNow">Request Now</string>
    <string name="setLocation">Set Location</string>
    <string name="price">Price: </string>
    <string name="distance">Distance: </string>
    //
    <string name="from"> From : </string>
    <string name="to"> To : </string>
    <string name="when"> When : </string>
    <string name="choose_the_way"> Choose the way </string>

    //
    <string name="enterAdress">Enter Address, City, Or Zip code</string>

    //Strings for spinner
    <string name="motor">Motorcycle</string>
    <string name="car">Car</string>
    <string name="van">Van</string>
    <string name="bus">Bus</string>

    <string name="addplace">Add Saved Place</string>
    <string name="descForAddPlace">get to your favorite directions faster</string>

    //bottomsheet
    <string name="setOnMap">Set On Map</string>
    <string name="save">Save</string>

    //write details for saved places
    <string name="city">City</string>
    <string name="Street">Street</string>
    <string name="home">Home</string>
    <string name="hintCity">example…Gaza</string>
    <string name="hintHome">example…Nasma\'s home</string>

    <string name="scheduleAride">Schedule a Ride</string>
    <string name="setTime">Set Time</string>

    <string name="search">Search</string>

    // info page
    <string name="help">Help</string>
    <string name="wallet">Wallet</string>
    <string name="trips">Trips</string>
    <string name="massage">Massages</string>
    <string name="setting">Settings</string>

    //settings
    <string name="accountSetting">Account Settings</string>
    <string name="favourites">Favourites</string>
    <string name="addHome">Add Home</string>
    <string name="addWork">Add Work</string>
    <string name="moreSavedPlaces">More Saved Places</string>

    <string name="safety">Safety</string>

    <string name="trustedContacts">Manage Trusted Contacts</string>
    <string name="descForTrustedContacts">Share your trip status with family and friends \n in a single tap</string>

    <string name="verifyRide">Verify Your Ride</string>
    <string name="descForVerifyRide">Use a PIN to make sure you get in the right car</string>

    <string name="checkRide">Check Ride</string>
    <string name="descForCheckRide">Manage your RideCheck notifications</string>

    <string name="family">Family</string>

    <string name="setUpUrFamily">Set up your family</string>
    <string name="descForSetFamily">Pay for your loved ones and get trip notifications</string>

    <string name="privacy">Privacy</string>
    <string name="descForPrivacy">Manage the data you share with us</string>

    <string name="security">Security</string>
    <string name="descForSecurity">Control your account security with 2-step verification</string>

    <string name="logout">Log Out</string>

    <string name="cash">Cash</string>
    <string name="payment">Payment Method</string>
    <string name="addPayment">Add Payment Method</string>
    
    //addPayment
    <string name="credit" translatable="false">Credit or Debit Card</string>
    <string name="paypal" translatable="false">PayPal</string>
    <string name="gPay" translatable="false">Google Pay</string>

    <string name="myTrips">My Trips</string>
    
    




</resources>