<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".AccountSettings">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tvSettingPhoneNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/grayLines"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/ivProf"
            app:layout_constraintStart_toEndOf="@id/ivProf"
            app:layout_constraintTop_toTopOf="@id/ivProf"
            />
        <ImageView
            android:id="@+id/ivProf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_user_profile_70"/>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            android:background="#68E0E2EE"
            app:layout_constraintTop_toBottomOf="@id/ivProf"
            app:layout_constraintStart_toStartOf="@id/ivProf"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="40dp"/>
        <TextView
            android:id="@+id/tvFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:text="@string/favourites"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="@id/divider"
            android:layout_marginVertical="40dp"
            />
        <TextView
            android:id="@+id/tvAddHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grayLines"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/addHome"
            android:drawablePadding="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvFav"
            app:layout_constraintStart_toStartOf="@id/tvFav"
            android:layout_marginTop="40dp"
            app:drawableStartCompat="@drawable/ic_user_profile" />
        <TextView
            android:id="@+id/tvAddWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grayLines"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/addWork"
            android:drawablePadding="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvAddHome"
            app:layout_constraintStart_toStartOf="@id/tvAddHome"
            android:layout_marginTop="20dp"
            app:drawableStartCompat="@drawable/ic_user_profile" />

        <TextView
            android:id="@+id/tvMoreSavedPlaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grayLines"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/moreSavedPlaces"
            app:layout_constraintTop_toBottomOf="@id/tvAddWork"
            app:layout_constraintStart_toStartOf="@id/tvAddWork"
            android:layout_marginTop="20dp"
           />
        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            android:background="#68E0E2EE"
            app:layout_constraintTop_toBottomOf="@id/tvMoreSavedPlaces"
            app:layout_constraintStart_toStartOf="@id/divider"
            app:layout_constraintEnd_toEndOf="@id/divider"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="40dp"/>

        <TextView
            android:id="@+id/tvSafety"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:text="@string/safety"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintStart_toStartOf="@id/divider1"
            android:layout_marginVertical="40dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTrustedContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/tvSafety"
            app:layout_constraintStart_toStartOf="@id/tvSafety">
            <ImageView
                android:id="@+id/ivManageContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_user_profile"/>

            <TextView
                android:id="@+id/tvManageContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayLines"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:text="@string/trustedContacts"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivManageContacts"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayLines"
                android:textSize="14sp"
                android:text="@string/descForTrustedContacts"
                app:layout_constraintTop_toBottomOf="@id/tvManageContacts"
                app:layout_constraintStart_toStartOf="@id/tvManageContacts"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clVerifyRide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/clTrustedContacts"
            app:layout_constraintStart_toStartOf="@id/clTrustedContacts">
            <ImageView
                android:id="@+id/ivVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_user_profile"/>

            <TextView
                android:id="@+id/tvVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayLines"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:text="@string/verifyRide"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivVerify"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayLines"
                android:textSize="14sp"
                android:maxLines="2"
                android:text="@string/descForTrustedContacts"
                app:layout_constraintTop_toBottomOf="@id/tvVerify"
                app:layout_constraintStart_toStartOf="@id/tvVerify"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCheckRide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/clVerifyRide"
            app:layout_constraintStart_toStartOf="@id/clVerifyRide">
            <ImageView
                android:id="@+id/ivCheckRide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_user_profile"/>

            <TextView
                android:id="@+id/tvCheckRide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayLines"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:text="@string/checkRide"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivCheckRide"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayLines"
                android:textSize="14sp"
                android:text="@string/descForCheckRide"
                app:layout_constraintTop_toBottomOf="@id/tvCheckRide"
                app:layout_constraintStart_toStartOf="@id/tvCheckRide"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            android:background="#68E0E2EE"
            app:layout_constraintTop_toBottomOf="@id/clCheckRide"
            app:layout_constraintStart_toStartOf="@id/divider1"
            app:layout_constraintEnd_toEndOf="@id/divider1"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="40dp"/>

        <TextView
            android:id="@+id/tvFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/divider2"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            android:text="@string/family"
            android:textSize="18sp"
            android:layout_marginVertical="40dp"
            android:textColor="@color/gray"/>
        <LinearLayout
            android:id="@+id/llSetUpFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvFamily"
            app:layout_constraintStart_toStartOf="@id/tvFamily">

            <TextView
                android:id="@+id/tvSetUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayLines"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:text="@string/setUpUrFamily"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayLines"
                android:textSize="14sp"
                android:text="@string/descForSetFamily"
                android:layout_marginStart="20dp"
                />

        </LinearLayout>
        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            android:background="#68E0E2EE"
            app:layout_constraintTop_toBottomOf="@id/llSetUpFamily"
            app:layout_constraintStart_toStartOf="@id/divider2"
            app:layout_constraintEnd_toEndOf="@id/divider2"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"/>
        <LinearLayout
            android:id="@+id/llPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            app:layout_constraintStart_toStartOf="@id/divider3">

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayLines"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:text="@string/privacy"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayLines"
                android:textSize="14sp"
                android:text="@string/descForPrivacy"
                android:layout_marginStart="20dp"
                />

        </LinearLayout>
        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            android:background="#68E0E2EE"
            app:layout_constraintTop_toBottomOf="@id/llPrivacy"
            app:layout_constraintStart_toStartOf="@id/divider3"
            app:layout_constraintEnd_toEndOf="@id/divider3"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"/>
        <LinearLayout
            android:id="@+id/llSecurity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/divider4"
            app:layout_constraintStart_toStartOf="@id/divider4">

            <TextView
                android:id="@+id/tvSecurity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayLines"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:text="@string/security"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayLines"
                android:textSize="14sp"
                android:text="@string/descForSecurity"
                android:layout_marginStart="20dp"
                />

        </LinearLayout>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            android:background="#68E0E2EE"
            app:layout_constraintTop_toBottomOf="@id/llSecurity"
            app:layout_constraintStart_toStartOf="@id/divider4"
            app:layout_constraintEnd_toEndOf="@id/divider4"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="25dp"/>

        <TextView
            android:id="@+id/tvSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grayLines"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/logout"
            android:layout_marginVertical="25dp"
            app:layout_constraintStart_toStartOf="@id/divider5"
            app:layout_constraintTop_toBottomOf="@id/divider5"
            app:layout_constraintBottom_toBottomOf="parent"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>