<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetContainer"
    android:background="@drawable/btm_sheet_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/city"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/Street"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvCity"
        app:layout_constraintTop_toBottomOf="@+id/tvCity" />

    <TextView
        android:id="@+id/tvHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/home"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvStreet"
        app:layout_constraintTop_toBottomOf="@+id/tvStreet" />



    <EditText
        android:id="@+id/etCity"
        android:layout_width="0dp"
        android:layout_marginHorizontal="40dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:hint="@string/hintCity"
        android:background="@drawable/tv_stroke"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvStreet"
        app:layout_constraintTop_toTopOf="@+id/tvCity" />

    <EditText
        android:id="@+id/etStreet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Street"
        android:textColor="@color/black"
        android:background="@drawable/tv_stroke"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/etCity"
        app:layout_constraintStart_toStartOf="@+id/etCity"
        app:layout_constraintTop_toBottomOf="@+id/etCity" />

    <EditText
        android:id="@+id/etHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:hint="@string/hintHome"
        android:textColor="@color/black"
        android:background="@drawable/tv_stroke"
        app:layout_constraintEnd_toEndOf="@+id/etStreet"
        app:layout_constraintStart_toStartOf="@+id/etStreet"
        app:layout_constraintTop_toBottomOf="@+id/etStreet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvHome"
        app:layout_constraintTop_toBottomOf="@id/tvHome"
        android:layout_marginVertical="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/btnSetOnMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintHorizontal_weight="1"
            android:background="@drawable/tv_stroke"
            android:backgroundTint="@color/black"
            android:text="@string/setOnMap"
            android:textColor="@color/backgroundColor"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"
            />
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintStart_toEndOf="@id/btnSetOnMap"
            app:layout_constraintTop_toTopOf="@id/btnSetOnMap"
            android:background="@drawable/tv_stroke"
            android:text="@string/save"
            android:textColor="@color/backgroundColor"
            android:backgroundTint="@color/black"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"
            />

    </LinearLayout>
<!--    <Button-->
<!--        android:id="@+id/btnSetOnMap"-->
<!--        android:layout_width="0dp"-->
<!--        android:padding="10dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="30dp"-->
<!--        android:layout_marginVertical="40dp"-->
<!--        android:background="@drawable/btn_rounded"-->
<!--        android:text="@string/setOnMap"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/grayLines"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="@id/tvHome"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvHome"-->
<!--        />-->

<!--    <Button-->
<!--        android:id="@+id/btnSave"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="30dp"-->
<!--        android:background="@drawable/btn_rounded"-->
<!--        app:layout_constraintHorizontal_weight="1"-->
<!--        android:text="@string/setOnMap"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/grayLines"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@id/btnSetOnMap"-->
<!--        app:layout_constraintTop_toTopOf="@id/btnSetOnMap"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->


</androidx.constraintlayout.widget.ConstraintLayout>