<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".UI.VerifyPhone.SendVCode">

    <TextView
        android:id="@+id/enterPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeToAddNumber"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/whyPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explainToAddNumber"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/enterPhone"
        app:layout_constraintRight_toRightOf="@id/enterPhone"
        app:layout_constraintTop_toBottomOf="@id/enterPhone"/>
   <LinearLayout
       android:id="@+id/linearPhone"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="70dp"
       app:layout_constraintStart_toStartOf="@id/whyPhone"
       app:layout_constraintEnd_toEndOf="@id/whyPhone"
       app:layout_constraintTop_toBottomOf="@id/whyPhone"
       >
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="18sp"
           android:textStyle="bold"
           android:textColor="@color/black"
           android:text="+972"/>
       <EditText
           android:id="@+id/etPhoneNumber"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/TextNumberHint"
           android:textColorHint="@color/black"
           android:textColor="@color/black"
           android:layout_marginHorizontal="15dp"
           android:inputType="number"
           android:imeOptions="actionDone"
           android:padding="10dp"
           android:autofillHints="no"
           tools:ignore="TextFields" />
   </LinearLayout>
   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="50dp"
       app:layout_constraintTop_toBottomOf="@id/linearPhone"
       app:layout_constraintEnd_toEndOf="@id/linearPhone"
       app:layout_constraintStart_toStartOf="@id/linearPhone"
       >
       <Button
           android:id="@+id/btnContinuePhone"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="15dp"
           android:text="@string/ButtonPhoneContinue"
           android:textAllCaps="false"
           android:padding="10dp"
           android:textStyle="bold"
           android:textSize="16sp"
           android:backgroundTint="@color/black"
           android:textColor="@color/backgroundColor"
           />
       <ProgressBar
           android:id="@+id/pbContinue"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:layout_gravity="center"
           android:visibility="gone"
           />
   </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>